ci: improve GitHub Actions workflows and fix deprecated JVM flags (#69)